# qt-5.11.1-thin

./: .appveyor.yml  .travis.yml  README.md
.build/: configure_linux_static.sh  configure_win_static.bat  make.bat  make_install.bat
.documents/: qt.5.11.1.configure.help.txt
.test00/: CMakeLists.txt  README.md  build.bat  main.cpp  mainwindow.hpp  mainwindow.ui  run.bat
_build/: configure_win_static.bat
_documents/: qt.5.11.1.list.features.txt
